--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,30 @@
-extends layout
+extend layout
 
 block content
-  h1= title
-  h3 Welcome to #{place}
-  p #{message}
+    h1 IBM Bluemix DevOps Services
+    ul
+        li Best-of-breed industry toolchains, proven to work well together in real world projects.
+        li Ease of acquisition & deployment on-line marketplace, common terms and conditions, single source of support, automatic tool configuration.
+        li Ease of integration – single Sign-on, notifications, data/status passing, workflow.
+        li Customizable toolchain templates, one click setup.
+        li DevOps Intelligence – aggregate tool output and analytics on application and delivery process.
+
+        h1 DevOps Tooling and Culture
+
+            ul
+                li Rapidly iterating and experimenting, deploying new versions many times per day.
+                li The most successful teams adopt modern DevOps architectural patterns, culture and practices, and assemble toolchains from the latest best-of-breed tools.
+                li Being able to do this quickly is a key competitive advantage.
+                li Rapidly evolving ecosystem of tools, tool of choice today will be different in different in 6 months.
+                li Considerable effort to select, deploy, and integrate these multi-vendor toolchains, and then you have to manage them on an ongoing basis.
+
+
+block sidebar
+  .widget
+        h1 Bluemix Service We Used
+        img(src="images/nodejs.png" alt="Node.js Runtime")
+        img(src="images/auto-scaling.png" alt="Auto Scaling")
+        img(src="images/continueDelivery.png" alt="Auto Scaling")
+
+
 
