--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,16 @@
 doctype html
 html
   head
-    title= title
+    title #{title} - IBM DevOps Demo
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    block content
+    header
+      h1 IBM DevOps Demo
+      h4 #{place}
+    .container
+      .main-content
+        block content
+      .sidebar
+        block sidebar
+    footer
+      p Running on node with Express, Jade and Stylus
