--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -96,6 +96,9 @@ td {
   font-weight: normal;
   vertical-align: middle;
 }
+img{
+  width:100%;
+}
 a img {
   border: none;
 }
@@ -123,13 +126,13 @@ header {
   text-shadow: 0px -1px 0px #df1806;
 }
 .container {
-  width: 500px;
+  width: 80%;
   margin: 50px auto;
   overflow: hidden;
 }
 .main-content {
   float: left;
-  width: 300px;
+  width: 100%;
 }
 .main-content p {
   margin-bottom: 20px;
