--- a/views/index.jade
+++ b/views/index.jade
@@ -1,10 +1,71 @@
 extend layout
 
 block content
-    h1 Version:1.0.20170730
+    h1 Version:1.0.20170802
     br
     br
-    img(src="images/devopsbg.png")
-    img(src="images/devopsbg2.png")
+    section.welcome-item(data-reactid='16')
+        .welcome-column-container(data-reactid='17')
+            .welcome-column(data-reactid='18')
+                img(src='images/welcome-toolchain.png', alt='', data-reactid='19')
+            .welcome-column(data-reactid='20')
+                h1.optimize(data-reactid='21') Optimize DevOps practices
+                h3.nonibmer-optimize(data-reactid='22')
+                    img(src='images/toolchains.svg', alt='', data-reactid='23')
+                    // react-text: 24
+                    | Create an integrated toolchain
+                    // /react-text
+                p(data-reactid='25')
+                    | Toolchains provide an integrated set of tools to build, deploy and manage your apps. You can create toolchains that include Bluemix services, open source tools, and third party tools that make development and operations repeatable and easier to manage.
+        .welcome-container(data-reactid='26')
+            .icon-container(data-reactid='27')
+                img(src='images/welcome-pipeline-icon.svg', alt='welcome-pipeline-icon', data-reactid='28')
+            .icon-container(data-reactid='29')
+                img(src='images/welcome-gitlab-icon.svg', alt='welcome-gitlab-icon', data-reactid='30')
+            .icon-container(data-reactid='31')
+                img(src='images/github.png', alt='github', data-reactid='32')
+            .icon-container(data-reactid='33')
+                img(src='images/bluemix.svg', alt='bluemix', data-reactid='34')
+            .icon-container(data-reactid='35')
+                img(src='images/sauce-labs-red.svg', alt='sauce-labs-red', data-reactid='36')
+            .icon-container(data-reactid='37')
+                img(src='images/orion.svg', alt='orion', data-reactid='38')
+            .icon-container(data-reactid='39')
+                img(src='images/pagerduty.svg', alt='pagerduty', data-reactid='40')
+            .icon-container(data-reactid='41')
+                img(src='images/welcome-bam-icon.svg', alt='welcome-bam-icon', data-reactid='42')
+            .icon-container(data-reactid='43')
+                img(src='images/alert-notification.svg', alt='alert-notification', data-reactid='44')
+            .icon-container(data-reactid='45')
+                img(src='images/active-deploy.svg', alt='active-deploy', data-reactid='46')
+            .icon-container(data-reactid='47')
+                img(src='images/analytics.svg', alt='analytics', data-reactid='48')
+            .icon-container(data-reactid='49')
+                img(src='images/new-relic.svg', alt='new-relic', data-reactid='50')
+            .icon-container(data-reactid='51')
+                img(src='images/slack.svg', alt='slack', data-reactid='52')
+            .icon-container(data-reactid='53')
+                img(src='images/auto-scaling.png', alt='auto-scaling', data-reactid='54')
+            .icon-container(data-reactid='55')
+                img(src='images/welcome-insights-icon.svg', alt='welcome-insights-icon', data-reactid='56')
+            .icon-container(data-reactid='57')
+                img(src='images/secure-cloud.png', alt='secure-cloud', data-reactid='58')
+            .icon-container(data-reactid='59')
+                img(src='images/jkool.png', alt='jkool', data-reactid='60')
+            .icon-container(data-reactid='61')
+                img(src='images/hiptest.png', alt='hiptest', data-reactid='62')
+            .icon-container(data-reactid='63')
+                img(src='images/track-plan.png', alt='track-plan', data-reactid='64')
+            .icon-container(data-reactid='65')
+                img(src='images/load-impact.png', alt='load-impact', data-reactid='66')
+            .icon-container(data-reactid='67')
+                img(src='images/blaze-meter.png', alt='blaze-meter', data-reactid='68')
+            .icon-container(data-reactid='69')
+                img(src='images/monitoring-analytics.png', alt='monitoring-analytics', data-reactid='70')
+            .icon-container(data-reactid='71')
+                img(src='images/global-pipeline.png', alt='global-pipeline', data-reactid='72')
+            .icon-container(data-reactid='73')
+                img(src='images/jira.svg', alt='jira', data-reactid='74')
+
 
 
