--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,8 +5,10 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     header
-      h1 IBM DevOps Demo
-      h4 #{place}
+      h1 IBM Bluemix DevOps
+      br
+      br
+      h4 -----#{place} 2017
     .container
       .main-content
         block content
